Do not always capitalise text

--- a/ui/template/header.html
+++ b/ui/template/header.html
@@ -148,7 +148,7 @@
               </form>
             </div>
             <!-- <div class="lg-none mt-3 pb-1 nav-item">
-              <a class="text-capitalize text-nowrap btn btn-light" href="/questions/ask">{{translator $.language "ui.btns.add_question"}}</a>
+              <a class="text-nowrap btn btn-light" href="/questions/ask">{{translator $.language "ui.btns.add_question"}}</a>
             </div> -->
             <div class="d-none d-lg-flex justify-content-start justify-content-sm-end col-lg-4">
               <!-- <a role="button" tabindex="0" href="/users/login" class="me-2 link-light btn btn-link">
