--- a/ui/template/sidenav.html
+++ b/ui/template/sidenav.html
@@ -22,7 +22,7 @@
 <div id="sideNav" class="position-relative d-none d-lg-block col-xl-2 col-lg-3 col-md-12">
   <div class="nav-wrap pt-4">
     <div class="flex-column nav nav-pills">
-      <a class="nav-link active" href="/questions">
+      <a class="nav-link active" href="{{$.baseURL}}/questions">
         <i class="br bi-question-circle-fill me-2"></i>
         <span>{{translator $.language "ui.header.nav.question"}}</span>
       </a>
@@ -30,7 +30,7 @@
         <i class="br bi-tags-fill me-2"></i>
         <span>{{translator $.language "ui.header.nav.tag"}}</span>
       </a>
-      <a class="nav-link" href="/users">
+      <a class="nav-link" href="{{$.baseURL}}/users">
         <i class="br bi-people-fill me-2"></i>
         <span>{{translator $.language "ui.header.nav.user"}}</span>
       </a>
