fix: reactions add aria-label attribute

--- a/ui/src/pages/Questions/Detail/index.scss
+++ b/ui/src/pages/Questions/Detail/index.scss
@@ -27,7 +27,7 @@
         background-color: var(--bs-gray-100);
       }
 
-      &:active {
+      &:active, &.active {
         background-color: var(--bs-gray-200);
       }
     }
