feat(template): add custom html in template #895

--- a/ui/template/footer.html
+++ b/ui/template/footer.html
@@ -30,6 +30,9 @@
             </div>
         </footer>
     </div>
+<!--customize_footer-->
+{{if .FooterCode }}{{.FooterCode}}{{end}}
+<!--customize_footer-->
 </body>
 </html>
 {{end}}
