--- a/ui/template/footer.html
+++ b/ui/template/footer.html
@@ -31,7 +31,7 @@
         </footer>
     </div>
 <!--customize_footer-->
-{{if .FooterCode }}{{.FooterCode}}{{end}}
+{{if .FooterCode }}{{.FooterCode | templateHTML}}{{end}}
 <!--customize_footer-->
 </body>
 </html>
