fix: search icon styles

--- a/ui/src/components/Header/index.scss
+++ b/ui/src/components/Header/index.scss
@@ -104,7 +104,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    padding: 0.5rem 1rem;
+    padding: 11px 13px;
+    line-height: 1;
   }
 }
 
