--- a/ui/src/components/CardBadge/index.scss
+++ b/ui/src/components/CardBadge/index.scss
@@ -17,30 +17,20 @@
  * under the License.
  */
 
-import UserInfo from './UserInfo';
-import NavBar from './NavBar';
-import Overview from './Overview';
-import TopList from './TopList';
-import Alert from './Alert';
-import ListHead from './ListHead';
-import DefaultList from './DefaultList';
-import Reputation from './Reputation';
-import Comments from './Comments';
-import Votes from './Votes';
-import Answers from './Answers';
-import Badges from './Badges';
+.badge-card {
+  width: 194px;
+  margin: 12px;
 
-export {
-  Alert,
-  UserInfo,
-  NavBar,
-  Overview,
-  TopList,
-  ListHead,
-  DefaultList,
-  Reputation,
-  Comments,
-  Votes,
-  Answers,
-  Badges,
-};
+  .label {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  .badge-card {
+    width: 163.5px;
+  }
+}
