feat: Add Open Search support

--- a/ui/template/header.html
+++ b/ui/template/header.html
@@ -33,6 +33,7 @@
 
     <link rel="canonical" href="{{.siteinfo.Canonical}}" />
     <link rel="manifest" href="{{$.baseURL}}/manifest.json" />
+    <link rel="search" type="application/opensearchdescription+xml" href="{{$.baseURL}}/opensearch.xml" title="{{.siteinfo.General.Name}}" />
     <link href="{{.cssPath}}" rel="stylesheet" />
     <link href="{{$.baseURL}}/custom.css" rel="stylesheet" />
     <link
