perf: remove extra characters in header.html

--- a/ui/template/header.html
+++ b/ui/template/header.html
@@ -68,14 +68,14 @@
     <meta
             property="og:image"
             itemProp="image primaryImageOfPage"
-            content="{{if $.siteinfo.Branding.Favicon }}{{$.siteinfo.Branding.Favicon}}{{else}}{{$.baseURL}}/favicon.ico{{end}}"}
+            content="{{if $.siteinfo.Branding.Favicon }}{{$.siteinfo.Branding.Favicon}}{{else}}{{$.baseURL}}/favicon.ico{{end}}"
     />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:domain" content="{{.siteinfo.General.SiteUrl}}" />
     <meta name="twitter:description" content="{{.description}}" />
     <meta
             name="twitter:image"
-            content="{{if $.siteinfo.Branding.Favicon }}{{$.siteinfo.Branding.Favicon}}{{else}}{{$.baseURL}}/favicon.ico{{end}}"}
+            content="{{if $.siteinfo.Branding.Favicon }}{{$.siteinfo.Branding.Favicon}}{{else}}{{$.baseURL}}/favicon.ico{{end}}"
     />
     <meta name="go-template">
     <!--customize_head-->
