update: tag styles change

--- a/ui/src/common/color.scss
+++ b/ui/src/common/color.scss
@@ -110,31 +110,19 @@
 
   /** tag **/
   .badge-tag {
-    background: rgba($blue-900, 0.5);
-    color: $blue-300;
-    &:hover {
-      color: $blue-300;
-      background: $blue-900;
-    }
-  }
-  .badge-tag-required {
     background: $gray-800;
-    color:$gray-300;
-    border: 1px solid $gray-600;
+    color: $gray-300;
     &:hover {
-      color: $gray-300;
-      background: $gray-700;
-    }
-  }
-  .badge-tag-reserved {
-    color: $orange-300;
-    background: rgba($orange-900, 0.5);
-    border: 1px solid $orange-900;
-    &:hover {
-      color: $orange-300;
-      background: rgba($orange-900, 1);
+      background: $gray-600;
     }
   }
 
+  .badge-tag-reserved {
+    color: $orange-200;
+    background: $orange-800;
+    &:hover {
+      background: $orange-700;
+    }
+  }
 
 }
