--- a/ui/template/question.html
+++ b/ui/template/question.html
@@ -94,7 +94,9 @@
         </div>
       </div>
     </div>
-    <div class="mt-5 mt-lg-0 col-xxl-3 col-lg-4 col-sm-12"></div>
+    <div class="page-right-side mt-4 mt-xl-0 col">
+      {{template "hot-question" .}}
+    </div>
   </div>
 </div>
 {{template "footer" .}}
