--- a/ui/template/tag-detail.html
+++ b/ui/template/tag-detail.html
@@ -19,14 +19,12 @@
 
 -->
 {{template "header" . }}
-<div class="pt-4 mt-2 mb-5 container">
-  <div class="justify-content-center row">
-    <div class="col-xxl-7 col-lg-8 col-sm-12">
+<div class="col-xl-10 col-lg-9 col-md-12">
+  <div class="pt-4 mb-5 row">
+    <div class="page-main flex-auto col">
       <div class="tag-box mb-5">
         <h3 class="mb-3">
-          <a class="link-dark" href="{{$.baseURL}}/tags/{{$.tag.SlugName}}"
-            >{{$.tag.SlugName}}</a
-          >
+          <a class="link-dark" href="{{$.baseURL}}/tags/{{$.tag.SlugName}}">{{$.tag.SlugName}}</a>
         </h3>
         <p class="text-break">{{formatLinkNofollow $.tag.ParsedText}}</p>
       </div>
@@ -36,62 +34,51 @@
             {{translator ($.language) "ui.question.x_questions" "count"
             .questionCount}}
           </h5>
+          {{template "sort-btns" .}}
         </div>
-        <div class="border-top border-bottom-0 list-group list-group-flush">
+        <div class="rounded list-group">
           {{range .questionList}}
-          <div class="border-bottom pt-3 pb-2 px-0 list-group-item">
+          <div class="bg-transparent py-3 px-0 border-start-0 border-end-0 list-group-item">
             <h5 class="text-wrap text-break">
               {{if $.useTitle }}
-              <a class="link-dark" href="{{$.baseURL}}/questions/{{.ID}}/{{urlTitle .Title}}"
-                >{{.Title}}</a
-              >
+              <a class="link-dark" href="{{$.baseURL}}/questions/{{.ID}}/{{urlTitle .Title}}">{{.Title}}</a>
               {{else}}
               <a class="link-dark" href="{{$.baseURL}}/questions/{{.ID}}">{{.Title}}</a>
               {{end}}
             </h5>
-            <div
-              class="d-flex flex-column flex-md-row align-items-md-center small text-secondary"
-            >
-              <div class="d-flex">
-                <div class="text-secondary me-1">
-                  <a href="{{$.baseURL}}/users/{{.Operator.Username}}"
-                    ><span class="me-1 text-break"
-                      >{{.Operator.DisplayName}}</span
-                    ></a
-                  ><span class="fw-bold" title="Reputation"
-                    >{{.Operator.Rank}}</span
-                  >
+            <div class="d-flex flex-wrap flex-column flex-md-row align-items-md-center small mb-2 text-secondary">
+              <div class="d-flex flex-wrap me-0 me-md-3">
+                <div class="d-flex align-items-center text-secondary me-1">
+                  <a href="{{$.baseURL}}/users/{{.Operator.Username}}"><span
+                      class="me-1 text-break">{{.Operator.DisplayName}}</span></a><span class="fw-bold"
+                    title="Reputation">{{.Operator.Rank}}</span>
                 </div>
                 •
-                <time
-                  class="text-secondary ms-1"
-                  datetime="{{timeFormatISO $.timezone .OperatedAt}}"
-                  title="{{translatorTimeFormatLongDate $.language $.timezone .OperatedAt}}"
-                  >{{translator $.language "ui.question.asked"}}
+                <time class="text-secondary ms-1" datetime="{{timeFormatISO $.timezone .OperatedAt}}"
+                  title="{{translatorTimeFormatLongDate $.language $.timezone .OperatedAt}}">{{translator $.language
+                  "ui.question.asked"}}
                   {{translatorTimeFormat $.language $.timezone .OperatedAt}}
                 </time>
               </div>
-              <div class="ms-0 ms-md-3 mt-2 mt-md-0">
-                <span
-                  ><i class="br bi-hand-thumbs-up-fill"></i
-                  ><em class="fst-normal ms-1">{{.VoteCount}}</em></span
-                >
-                <span class="ms-3"
-                  ><i class="br bi-chat-square-text-fill"></i
-                  ><em class="fst-normal ms-1">{{.AnswerCount}}</em></span
-                >
-                <span class="summary-stat ms-3"
-                  ><i class="br bi-eye-fill"></i
-                  ><em class="fst-normal ms-1">{{.ViewCount}}</em></span
-                >
+              <div class="d-flex align-items-center mt-2 mt-md-0">
+                <div class="d-flex align-items-center flex-shrink-0">
+                  <i class="br bi-hand-thumbs-up-fill"></i>
+                  <em class="fst-normal ms-1">{{.VoteCount}}</em>
+                </div>
+                <div class="d-flex flex-shrink-0 align-items-center ms-3">
+                  <i class="br bi-chat-square-text-fill"></i>
+                  <em class="fst-normal ms-1">{{.AnswerCount}}</em>
+                </div>
+                <span class="summary-stat ms-3 flex-shrink-0">
+                  <i class="br bi-eye-fill"></i>
+                  <em class="fst-normal ms-1">{{.ViewCount}}</em>
+                </span>
               </div>
             </div>
-            <div class="question-tags mx-n1 mt-2">
+            <div class="question-tags mx-n1">
               {{range .Tags }}
-              <a
-                href="{{$.baseURL}}/tags/{{.SlugName}}"
-                class="badge-tag rounded-1 {{if .Reserved}}badge-tag-reserved{{end}} {{if .Recommend}}badge-tag-required{{end}} m-1"
-              >
+              <a href="{{$.baseURL}}/tags/{{.SlugName}}"
+                class="badge-tag rounded-1 {{if .Reserved}}badge-tag-reserved{{end}} {{if .Recommend}}badge-tag-required{{end}} m-1">
                 <span class="">{{.SlugName}}</span>
               </a>
               {{end}}
@@ -99,10 +86,14 @@
           </div>
           {{end}}
         </div>
-        <div class="mt-4 mb-2 d-flex justify-content-center"></div>
+        <div class="mt-4 mb-2 d-flex justify-content-center">
+          {{template "page" .}}
+        </div>
       </div>
     </div>
-    <div class="d-flex justify-content-center">{{template "page" .}}</div>
+    <div class="page-right-side mt-4 mt-xl-0 col">
+      {{template "hot-question" .}}
+    </div>
   </div>
 </div>
 {{template "footer" .}}
