fix: The pre tag sets the maximum height #1168

--- a/ui/src/index.scss
+++ b/ui/src/index.scss
@@ -250,6 +250,7 @@ img[src=""] {
     background-color: var(--an-e9ecef);
     border-radius: 0.25rem;
     padding: 1rem;
+    max-height: 38rem;
   }
   blockquote {
     border-left: 0.25rem solid #ced4da;
