fix: view icon replacement

--- a/ui/src/common/color.scss
+++ b/ui/src/common/color.scss
@@ -125,4 +125,16 @@
     }
   }
 
+  .view-level1 {
+    color: $orange-300;
+  }
+
+  .view-level2 {
+    color: $orange-200;
+  }
+
+  .view-level3 {
+    color: $orange-100;
+  }
+
 }
