fix: Top list UI optimization

--- a/ui/src/common/color.scss
+++ b/ui/src/common/color.scss
@@ -37,7 +37,7 @@
   --an-editor-toolbar-hover: #f8f9fa;
   --ans-editor-toolbar-focus: #dae0e5;
   --an-editor-placeholder-color: #6c757d;
-  --an-side-nav-link-hover-color: black;
+  --an-side-nav-link-hover-color: rgba(0, 0, 0, .85);
   --an-invite-answer-item-active: #e9ecef;
   --an-alert-exist-color: #055160;
 }
